adaptando imagem header

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ h1, h2, h3, h4, h5, h6, p{
 /* header */
 .header{
     min-height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), url(../images/header-banner-1.jpg) center/cover fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)), url(../images/header-banner-2.jpg) right/cover fixed;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
